# TestTaskLesta

./: CMakeLists.txt  LICENSE  main.cpp
classes/: Pellet.cpp  Tank.cpp
headers/: Pellet.hpp  Tank.hpp
